--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,8 +39,11 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
+        poetry install --no-root
+        poetry run task test
+        poetry run task lint
+        poetry run task formatter
+        poetry run task security
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Test with pytest
