--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -38,11 +38,21 @@ jobs:
         virtualenvs-in-project: false
         installer-parallel: true 
 
+
     - name: Install dependencies
       run: |
         poetry install --no-root
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
+
+    - name: Cache build venv
+      id: cached-poetry-dependencies
+      uses: actions/cache@v3
+      with:
+        path: /home/runner/.cache/pypoetry/virtualenvs
+        key: ${{ runner.os }}-venv
+
+
   lint:
     runs-on: ubuntu-latest
 
