--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,6 +16,10 @@ jobs:
 
   build:
 
+    strategy:
+      matrix:
+              os: [ "ubuntu-latest", "windows-latest" ]
+                
     runs-on: ubuntu-latest
 
     defaults:
@@ -54,6 +58,11 @@ jobs:
 
 
   lint:
+
+    strategy:
+      matrix:
+              os: [ "ubuntu-latest", "windows-latest" ]
+            
     runs-on: ubuntu-latest
 
     defaults:
@@ -91,6 +100,11 @@ jobs:
 
 
   formatter:
+
+    strategy:
+      matrix:
+              os: [ "ubuntu-latest", "windows-latest" ]
+
     runs-on: ubuntu-latest
 
     defaults:
@@ -127,6 +141,11 @@ jobs:
 
 
   security:
+
+    strategy:
+      matrix:
+              os: [ "ubuntu-latest", "windows-latest" ]
+              
     runs-on: ubuntu-latest
 
     defaults:
@@ -164,6 +183,11 @@ jobs:
         
 
   test:
+
+    strategy:
+      matrix:
+              os: [ "ubuntu-latest", "windows-latest" ]
+              
     runs-on: ubuntu-latest
   
     defaults:
